// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog Component should not render Dialog when dialogIsOpen is false 1`] = `
<div>
  <WithStyles(Dialog)
    aria-describedby="alert-dialog-description"
    aria-labelledby="responsive-dialog-title"
    onClose={[Function]}
    open={false}
  >
    <WithStyles(DialogTitle)
      id="responsive-dialog-title"
    />
    <WithStyles(DialogActions)>
      <WithStyles(Button)
        onClick={[Function]}
        style={
          Object {
            "color": "#039BE5",
          }
        }
      />
    </WithStyles(DialogActions)>
  </WithStyles(Dialog)>
</div>
`;

exports[`Dialog Component should render Dialog when dialogIsOpen is true 1`] = `
<div>
  <WithStyles(Dialog)
    aria-describedby="alert-dialog-description"
    aria-labelledby="responsive-dialog-title"
    onClose={[Function]}
    open={true}
  >
    <WithStyles(DialogTitle)
      id="responsive-dialog-title"
    />
    <WithStyles(DialogActions)>
      <WithStyles(Button)
        onClick={[Function]}
        style={
          Object {
            "color": "#039BE5",
          }
        }
      />
    </WithStyles(DialogActions)>
  </WithStyles(Dialog)>
</div>
`;
